--- a/doc/thesis/tex/thesis.tex
+++ b/doc/thesis/tex/thesis.tex
@@ -51,7 +51,7 @@
 \thispagestyle{empty}
 \section*{Poïakovanie}
 \vspace{10mm}
-Ïakujem rodine, priate¾ke Anne, vedúcemu Ing. Stanislavovi Marèekovi a môjmu trénerovi, Mgr. Patrikovi Kurilovi, ktorı ma o tréningu nauèil všetko, èo som mohol vyui pri návrhu algoritmu.
+Ïakujem rodine, priate¾ke Anne, vedúcemu práce Ing. Stanislavovi Marèekovi a môjmu trénerovi, Mgr. Patrikovi Kurilovi, ktorı ma o tréningu nauèil všetko, èo som mohol vyui pri návrhu algoritmu.
 
 \newpage
 \thispagestyle{empty}
